Got the logic for mouseover and mouseleave

--- a/index.html
+++ b/index.html
@@ -14,33 +14,36 @@
         <div id="1" class="feature">
             <h4>Highlighted Feature</h4>
             <div class="description">
-                <p>Stuff</p>
+                <p>This is where a two sentence description while go to accommodate the video.  Here is one more sentence to fill the space.</p>
             </div>
         </div>
         <div id="2" class="feature">
             <h4>Highlighted Feature</h4>
             <div class="description">
-                <p>Stuff</p>
+                <p>This is where a two sentence description while go to accommodate the video.  Here is one more sentence to fill the space.</p>
             </div>
 
         </div>
         <div id="3" class="feature">
             <h4>Highlighted Feature</h4>
             <div class="description">
-                <p>Stuff</p>
+                <p>This is where a two sentence description while go to accommodate the video.  Here is one more sentence to fill the space.</p>
             </div>
         </div>
         <div id="4" class="feature">
             <h4>Highlighted Feature</h4>
             <div class="description">
-                <p>Stuff</p>
+                <p>This is where a two sentence description while go to accommodate the video.  Here is one more sentence to fill the space.</p>
             </div>
         </div>
         <div id="5" class="feature">
             <h4>Highlighted Feature</h4>
             <div class="description">
-                <p>Stuff</p>
+                <p>This is where a two sentence description while go to accommodate the video.  Here is one more sentence to fill the space.</p>
             </div>
+        </div>
+        <div>
+            <button class="call-to-action">Schedule a complete demo</button>
         </div>
     </div>
     <div class="right-column">
